<package format="3">
  <name>rviz2_distance_tool</name>
  <version>0.1.0</version>
  <description>Rviz distance measurement tool for ROS2</description>

  <maintainer email="nekanat.stock@gmail.com">Kenta Tanaka</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
